WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278097
[iPadOS] Unable to keyboard scroll until interacting with a webpage
https://bugs.webkit.org/show_bug.cgi?id=278097
Summary
[iPadOS] Unable to keyboard scroll until interacting with a webpage
Abrar Rahman Protyasha
Reported
2024-08-14 03:21:49 PDT
rdar://132918882
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-08-14 03:28:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32190
EWS
Comment 2
2024-08-26 08:53:58 PDT
Committed
282736@main
(4bc804e0cef0): <
https://commits.webkit.org/282736@main
> Reviewed commits have been landed. Closing PR #32190 and removing active labels.
EWS
Comment 3
2024-08-30 16:33:12 PDT
Committed
280938.298@safari-7619-branch
(f146ecaa595f): <
https://commits.webkit.org/280938.298@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1688 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug