[iPadOS] Unable to keyboard scroll until interacting with a webpage https://bugs.webkit.org/show_bug.cgi?id=278097 rdar://132918882

Reviewed by Wenson Hsieh.

This patch attempts to re-land 281001@main, after addressing upstream
platform issues tracked by rdar://133501552 and rdar://133773329,
respectively.

```
    Since WKContentView conforms to UIKeyInput, the focus system treats
    it as a text field and defers making it the focused item. This causes
    the undesirable effect of having to interact with the webpage before
    keyboard scroll takes effect.

    Instead, in this PR, we opt out of focus deferral. This maintains our
    existing behavior of immediately gain focus. We achieve this by
    returning UIFocusItemDeferralModeNever for WKContentView's focus item
    deferral mode.
```

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView focusItemDeferralMode]):

Canonical link: https://commits.webkit.org/282736@main