Source/WebKit/UIProcess/ios/WKContentView.mm
@@ -816,6 +816,13 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     }
 }
 
+#if HAVE(UI_FOCUS_ITEM_DEFERRAL_MODE)
+- (UIFocusItemDeferralMode)focusItemDeferralMode
+{
+    return UIFocusItemDeferralModeNever;
+}
+#endif
+
 #pragma mark Internal
 
 - (void)_windowDidMoveToScreenNotification:(NSNotification *)notification
